<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity"
    android:id="@+id/homepage">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/heading"
        android:text="@string/registration"
        android:background="#00C8C8"
        android:textSize="50sp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heading"
        android:layout_marginTop="16dp"
        android:inputType="text"
        android:hint="@string/full_name"
        android:padding="11dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:layout_below="@+id/fullname"
        android:layout_marginTop="20dp"
        android:id="@+id/phone"
        android:inputType="phone"
        android:padding="11dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sex"
        android:textSize="18sp"
        android:layout_below="@+id/phone"
        android:layout_marginTop="20dp"
        android:id="@+id/txtsex"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rdgpsex"
        android:layout_below="@+id/txtsex"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:id="@+id/male"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:id="@+id/female"
            android:layout_marginStart="16dp"/>
    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rdgpsex"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:id="@+id/address"
        android:hint="@string/address" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:id="@+id/startDate"
        android:inputType="date"
        android:layout_marginTop="20dp"
        android:hint="@string/start_date"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startDate"
        android:hint="@string/end_date"
        android:id="@+id/endDate"
        android:inputType="date"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conditions"
        android:textSize="18sp"
        android:layout_below="@+id/endDate"
        android:layout_marginTop="20dp"
        android:id="@+id/condition"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/condition"
        android:id="@+id/check">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/work"
            android:text="@string/work"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/smoke"
            android:text="@string/smoke"
            android:layout_marginStart="16dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/workout"
            android:text="@string/workout"
            android:layout_marginStart="16dp"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submit"
        android:src="@drawable/ic_play"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#05E4DD"
        app:shapeAppearance="@style/Widget.Design.FloatingActionButton"/>

</RelativeLayout>